<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white">

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/stt_title"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/back"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:hint="@string/hint"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/red"
        app:backgroundTint="@color/red"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:background="@drawable/btn_bg"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingEnd="70dp"
        android:paddingStart="70dp"
        android:text="@string/begin"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>